FIX: Header Logo Width on Mobile Device

--- a/css/header.css
+++ b/css/header.css
@@ -34,11 +34,18 @@
  -webkit-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;
+ z-index: 1000;
 }
 
 @media screen and (max-width: 912px) {
   .header-logo {
     max-width: 200px;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .header-logo {
+    max-width: 150px;
   }
 }
 
